--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,8 @@
                                 "input": "node_modules/ngx-scanner-qrcode/wasm/",
                                 "output": "./assets/wasm/"
                               }],
-                        "styles": ["node_modules/font-awesome/css/font-awesome.css", 
+                        "styles": ["node_modules/font-awesome/css/font-awesome.css",
+                            "node_modules/ngx-spinner/animations/ball-scale-multiple.css", 
                             "src/styles/app.scss",
                             "node_modules/ngx-toastr/toastr.css"],
                         "scripts": ["node_modules/chart.js/dist/Chart.js"],
