--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
         "@angular/platform-browser-dynamic": "14.2.8",
         "@angular/router": "14.2.8",
         "@ng-bootstrap/ng-bootstrap": "13.1.0",
-        "@ngx-translate/core": "14.0.0",
-        "@ngx-translate/http-loader": "7.0.0",
         "@popperjs/core": "2.11.6",
         "bootstrap": "5.2.2",
         "chart.js": "3.7.1",
@@ -35,10 +33,11 @@
         "font-awesome": "4.7.0",
         "ng2-charts": "3.0.8",
         "ngx-mask": "^12.0.0",
+        "ngx-spinner": "14.0.0",
+        "ngx-toastr": "13.2.1",
         "rxjs": "7.5.7",
         "tslib": "2.4.1",
-        "zone.js": "~0.11.8",
-        "ngx-toastr": "13.2.1"
+        "zone.js": "~0.11.8"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "14.2.7",
