--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: ${{ secrets.DOCKER_USER }}/rcc-lda
+        repository: ${{ secrets.DOCKER_USER }}/rcc-lda-front
         tags: ${{ github.sha }}, latest
 
   deploy:
@@ -43,7 +43,7 @@ jobs:
       - name: update k8s
         run: |
           cd k8s
-          kustomize edit set image rcc-lda-front=williambr2022/rcc-lda-front:${{ github.sha }}
+          kustomize edit set image rcc-lda-front=${{ secrets.DOCKER_USER }}/rcc-lda-front:${{ github.sha }}
           cat kustomization.yaml
       - name: commit
         run: |
