--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build --prod",
+        "build": "ng build --configuration production",
         "gitbuild": "ng build --configuration production --base-href /start-angular/SB-Admin-BS4-Angular-8/master/dist/",
         "test": "ng test",
         "test-ci": "TEST_CI=true ng test",
