--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: rcc-lda-front-svc
+  name: rcc-londrina-front-svc
   namespace: rcc-manager
   labels:
-    app: rcc-lda-front
+    app: rcc-londrina-front
 spec:
   ports:
   - protocol: TCP
     port: 80
   selector:
-    app: rcc-lda-front
+    app: rcc-londrina-front
