--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,7 +43,7 @@ jobs:
       - name: update k8s
         run: |
           cd k8s
-          kustomize edit set image rcc-londrina-front=${{ secrets.DOCKER_USER }}/rcc-londrina-front:${{ github.sha }}
+          kustomize edit set image ${{ secrets.DOCKER_USER }}/rcc-londrina-front=${{ secrets.DOCKER_USER }}/rcc-londrina-front:${{ github.sha }}
           cat kustomization.yaml
       - name: commit
         run: |
